--- a/main.html
+++ b/main.html
@@ -8,6 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	        <img src="https://example.com/favorite-animal.jpg" alt="Favorite Animal" style="max-width: 100%; height: auto;">
+
+		
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
