--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	        <img src="https://example.com/favorite-animal.jpg" alt="Favorite Animal" style="max-width: 100%; height: auto;">
+	        <img src="https://example.com/favorite-animal.jpg" alt="Favorite Animal" >
 
 		
 
