--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	        <img src="https://example.com/favorite-animal.jpg" alt="Favorite Animal" >
+	        <img src="https://www.shutterstock.com/image-photo/close-bald-eagle-1590359908" alt="Favorite Animal" >
 
 		
 
