--- a/main.html
+++ b/main.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Favorite Animal</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-	        <img src="https://www.shutterstock.com/image-photo/close-bald-eagle-1590359908" alt="Favorite Animal" >
+    <header>
+        <h1>My Favorite Animal</h1>
+    </header>
 
-		
-
-	
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <main>
+        <section>
+            <h2>A Cute Panda</h2>
+            <img src="https://source.unsplash.com/featured/?panda" alt="A cute panda sitting in the bamboo forest">
+        </section>
+    </main>
 </body>
-
 </html>
