--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     <main>
         <section>
             <h2>A Cute Panda</h2>
-            <img src="https://source.unsplash.com/featured/?panda" alt="A cute panda sitting in the bamboo forest">
+            <img src="https://images.unsplash.com/photo-1530090382228-7195e08d7a75?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8YW5pbWFsfGVufDB8fDB8fHww" alt="https://images.unsplash.com/photo-1530090382228-7195e08d7a75?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8YW5pbWFsfGVufDB8fDB8fHww">
         </section>
     </main>
 </body>
